--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "vuepress": "^2.0.0-beta.23"
+  },
+  "dependencies": {
+    "@vuepress/plugin-search": "^2.0.0-beta.23"
   }
 }
