--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-register-components": "^2.0.0-beta.24",
+    "i": "^0.3.6",
+    "npm": "^7.20.6",
     "vuepress": "^2.0.0-beta.24"
   },
   "dependencies": {
