--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/plugin-register-components": "^2.0.0-beta.24",
-    "i": "^0.3.6",
-    "npm": "^7.20.6",
-    "vuepress": "^2.0.0-beta.24"
-  },
-  "dependencies": {
-    "@vuepress/plugin-search": "^2.0.0-beta.24"
+    "@vuepress/plugin-register-components": "^2.0.0-beta.36",
+    "vuepress": "^2.0.0-beta.36",
+    "@vuepress/plugin-search": "^2.0.0-beta.36"
   }
 }
